# QPointerGrabber

./: .appveyor.yml  CMakeLists.txt  README  README.md
src/: APointerGrabberImpl_p.cpp  APointerGrabberImpl_p.h  CMakeLists.txt  QPointerGrabber.cpp  QPointerGrabber.h  WindowEventsWatcher_p.cpp  WindowEventsWatcher_p.h  grabber_export.h
src/lin/: FiniteTimer_p.cpp  FiniteTimer_p.h  LinuxPointerGrabberImpl_p.cpp  LinuxPointerGrabberImpl_p.h
src/win/: WinPointerGrabberImpl_p.cpp  WinPointerGrabberImpl_p.h
test/: CMakeLists.txt  GrabberTest.cpp  GrabberTest.h
